# ReasoningExplain

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  environment.yml  pyproject.toml  test_phi4_reasoning.py
notebooks/: 00_template.ipynb  reasoning_shap_port.ipynb
src/: __init__.py  __main__.py  base.py  bias_detection.py  core.py  dataset_converter.py  evaluation_integration.py  human_evaluation.py  reasoning_shap.py  sfa_classifier.py  sfa_regression.py
tests/: test_core.py
